--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/Components/PriceReleaseDate/PriceReleaseDate/PriceReleaseDate.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/Components/PriceReleaseDate/PriceReleaseDate/PriceReleaseDate.module.css
@@ -32,13 +32,13 @@
 	margin: 0;
 }
 
-@media screen and (max-width: 645px) {
+@media screen and (max-width: 40.3125rem) {
 	.priceReleaseDateContainer {
 		display: block;
 	}
 }
 
-@media screen and (max-width: 396px) {
+@media screen and (max-width: 24.75rem) {
 	.priceReleaseDateContainer {
 		display: block;
 	}
