--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerItem/IndiGameBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerItem/IndiGameBannerItem.module.css
@@ -4,7 +4,7 @@
 }
 
 .individualGameBannerItem:not(:first-child) {
-	margin-left: 20px;
+	margin-left: 1.25rem;
 }
 .coverImg {
 	position: absolute;
