--- a/src/Shared/Footer/Footer.module.css
+++ b/src/Shared/Footer/Footer.module.css
@@ -85,7 +85,7 @@
 	}
 	.links li {
 		text-align: center;
-		margin-top: 5px;
+		margin-top: 0.3125rem;
 		font-size: 0.875rem;
 	}
 	.description {
