--- a/src/Shared/VideoPlayer/Components/Controllers/Components/VideoVolume/VideoVolume.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/VideoVolume/VideoVolume.module.css
@@ -27,7 +27,7 @@
 	max-width: 0px;
 	overflow: hidden;
 	position: relative;
-	margin-bottom: -3px;
+	margin-bottom: -0.1875rem;
 	padding: 0.625em 0;
 }
 
