--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesLists/Components/AllGamesContent/Components/AllGamesModalBodyEvents/AllGamesModalBodySelect/AllGamesModalBodySelect.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesLists/Components/AllGamesContent/Components/AllGamesModalBodyEvents/AllGamesModalBodySelect/AllGamesModalBodySelect.module.css
@@ -25,7 +25,7 @@
 	font-size: small;
 	color: #949494;
 }
-@media only screen and (max-width: 368px) {
+@media only screen and (max-width: 23rem) {
 	.card {
 		flex-direction: column;
 	}
