--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTagsAndCategories/Components/AddTagsOrCategories/AddTagsOrCategories/AddTagsOrCategoriesManager.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTagsAndCategories/Components/AddTagsOrCategories/AddTagsOrCategories/AddTagsOrCategoriesManager.module.css
@@ -4,10 +4,10 @@
 
 .selectionField {
 	margin: 1rem 0;
-	width: 200px;
+	width: 12.5rem;
 }
 
-@media only screen and (max-width: 200px) {
+@media only screen and (max-width: 12.5rem) {
 	.selectionField {
 		width: 100%;
 	}
