--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/GameInfoFieldBanner/GameInfoFieldBanner.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/GameInfoFieldBanner/GameInfoFieldBanner.module.css
@@ -7,8 +7,8 @@
 }
 
 .btn {
-	margin-right: 10px;
-	margin-top: 30px;
+	margin-right: 0.625rem;
+	margin-top: 1.875rem;
 }
 
 .header {
@@ -16,7 +16,7 @@
 	font-weight: 400;
 }
 
-@media only screen and (max-width: 1023px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 63.9375rem) and (min-width: 48.0625rem) {
 	.header {
 		font-size: 1.2rem;
 	}
