--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/GameInfoFieldSpecifications/GameInfoFieldSpecifications.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/GameInfoFieldSpecifications/GameInfoFieldSpecifications.module.css
@@ -3,7 +3,7 @@
 }
 
 .textField {
-	margin-top: 20px;
+	margin-top: 1.25rem;
 }
 
 .header {
@@ -11,7 +11,7 @@
 	font-weight: 400;
 }
 
-@media only screen and (max-width: 1023px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 63.9375rem) and (min-width: 48.0625rem) {
 	.header {
 		font-size: 1.2rem;
 	}
