--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/GameInfoFieldTags/GameInfoFieldTags.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldTags/GameInfoFieldTags/GameInfoFieldTags.module.css
@@ -18,7 +18,7 @@
 	font-weight: 400;
 }
 
-@media only screen and (max-width: 1023px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 63.9375rem) and (min-width: 48.0625rem) {
 	.header {
 		font-size: 1.2rem;
 	}
@@ -35,7 +35,7 @@
 		display: block;
 	}
 	.options:last-child {
-		margin-left: 0px;
-		margin-top: 10px;
+		margin-left: 0;
+		margin-top: 0.625rem;
 	}
 }
