--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -15,7 +15,7 @@
 		margin-top: 1rem;
 	}
 }
-@media only screen and (max-width: 499px) {
+@media only screen and (max-width: 31.1875rem) {
 	.dashboardBody {
 		width: calc(100% - 1rem);
 		margin-top: 1rem;
