--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -30,7 +30,7 @@
 	font-size: 0.875rem;
 	text-align: center;
 	text-wrap: nowrap;
-	margin: 5px 0;
+	margin: 0.3125rem 0;
 	transition: color 200ms;
 }
 
@@ -44,7 +44,7 @@
 	width: 100%;
 	height: 2px;
 	background-color: #333;
-	margin-top: 5px;
+	margin-top: 0.3125rem;
 	transition: background-color 200ms;
 }
 
