--- a/src/Pages/Dashboard/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard/Dashboard.module.css
@@ -6,7 +6,7 @@
 	position: relative;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 68.75rem) {
 	.dashboard {
 		column-gap: 0;
 	}
