--- a/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
@@ -6,7 +6,7 @@
 	column-gap: 3rem;
 }
 
-@media only screen and (max-width: 1199px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 74.9375rem) and (min-width: 48.0625rem) {
 	.mainContent {
 		column-gap: 1rem;
 		margin-left: 1rem;
