--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
@@ -9,7 +9,7 @@
 	font-weight: 400;
 }
 
-@media only screen and (max-width: 1199px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 74.9375rem) and (min-width: 48.0625rem) {
 	.browseHeader {
 		margin-left: 1rem;
 		width: calc(100% - 1rem);
