--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/PcSortList/SortButton/SortButton.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/Components/PcSortList/SortButton/SortButton.module.css
@@ -13,7 +13,7 @@
 	color: rgb(222, 222, 222);
 }
 .sortBy {
-	margin-left: 5px;
+	margin-left: 0.3125rem;
 }
 
 .downArrow {
@@ -21,9 +21,9 @@
 	width: 0.7rem;
 	height: 0.7rem;
 	top: 50%;
-	right: 5px;
+	right: 0.3125rem;
 	translate: 0 -50%;
-	margin-left: 5px;
+	margin-left: 0.3125rem;
 }
 
 @media only screen and (max-width: 48rem) {
