--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptionsWithApplyBtn/Components/FilterOptions/Components/FilterOptions/Components/FilterRangeOption/Components/RangeInput/RangeInputField/RangeInputField.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptionsWithApplyBtn/Components/FilterOptions/Components/FilterOptions/Components/FilterRangeOption/Components/RangeInput/RangeInputField/RangeInputField.module.css
@@ -12,10 +12,10 @@
 	border: 1px solid rgb(6, 73, 136);
 }
 .input:first-child {
-	margin-right: 10px;
+	margin-right: 0.625rem;
 }
 .input:last-child {
-	margin-left: 10px;
+	margin-left: 0.625rem;
 }
 .input:focus {
 	border: 1px solid rgb(26, 127, 221);
