--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/FilterGames/FilterGames.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/FilterGames/FilterGames.module.css
@@ -4,7 +4,7 @@
 .filterText {
 	font-weight: 400;
 }
-@media only screen and (max-width: 864px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 54rem) and (min-width: 48.0625rem) {
 	.FilterGames {
 		width: 30%;
 	}
