--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerButtons/DiscoverBannerButtons.module.css
@@ -38,13 +38,13 @@
 	}
 }
 
-@media only screen and (max-width: 528px) {
+@media only screen and (max-width: 33rem) {
 	.btn {
 		width: 1.5rem;
 		height: 1.5rem;
 	}
 }
-@media only screen and (max-width: 364px) {
+@media only screen and (max-width: 22.75rem) {
 	.btn {
 		width: 1rem;
 		height: 1rem;
