--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
@@ -2,7 +2,7 @@
 	visibility: hidden;
 	position: absolute;
 	height: 100%;
-	max-width: 15%;
+	max-width: 10%;
 	max-height: 20%;
 	margin-left: 2%;
 	display: flex;
@@ -65,7 +65,7 @@
 	}
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 63.9375rem) {
 	.priceContainer {
 		font-size: 0.875rem;
 	}
