--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -96,20 +96,20 @@
 	padding-bottom: calc(100% / 16 * 9);
 }
 
-@media only screen and (min-width: 2134px) {
+@media only screen and (min-width: 133.375rem) {
 	.itemButton button {
 		font-size: 1rem;
 	}
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 80rem) {
 	.itemButton button {
 		font-size: 0.8rem;
 		padding: 0.5rem;
 	}
 }
 
-@media only screen and (max-width: 1023px) and (min-width: 48.0625rem) {
+@media only screen and (max-width: 63.9375rem) and (min-width: 48.0625rem) {
 	.carouselItem {
 		width: 100%;
 		height: 100%;
