--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
@@ -41,7 +41,7 @@
 	flex-grow: 0;
 }
 .name {
-	margin-top: 10px;
+	margin-top: 0.625rem;
 	flex-grow: 1;
 }
 .gameDetail p {
@@ -64,7 +64,7 @@
 	}
 }
 
-@media only screen and (max-width: 352px) {
+@media only screen and (max-width: 22rem) {
 	.gameDetail p {
 		font-size: 0.75rem;
 	}
