--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
@@ -9,7 +9,7 @@
 	font-size: 1rem;
 	line-height: 1.25em;
 	letter-spacing: 0.2px;
-	margin-top: 30px;
+	margin-top: 1.875rem;
 	margin-bottom: 1.25em;
 }
 .descriptionContainer {
@@ -58,7 +58,7 @@
 .rotateArrowContainer {
 	width: 1rem;
 	height: 100%;
-	margin-left: 5px;
+	margin-left: 0.3125rem;
 	position: relative;
 }
 
