--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameOrderBy/IndiGameOrderBy/IndiGameOrderBy.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameOrderBy/IndiGameOrderBy/IndiGameOrderBy.module.css
@@ -2,7 +2,7 @@
 	position: relative;
 	display: flex;
 	justify-content: flex-end;
-	margin-bottom: 30px;
+	margin-bottom: 1.875rem;
 }
 
 .activeOrderContainer {
@@ -23,7 +23,7 @@
 }
 
 .rotateArrow {
-	margin-left: 5px;
+	margin-left: 0.3125rem;
 	width: 10px;
 	height: 10px;
 	position: relative;
