--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameViewMoreButton/IndiGameViewMoreButton.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/Components/IndiGameViewMoreButton/IndiGameViewMoreButton.module.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	margin-top: 30px;
+	margin-top: 1.875rem;
 }
 
 .individualGameViewMoreButton button {
