--- a/src/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
+++ b/src/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
@@ -14,10 +14,10 @@
 
 .discountPrice {
 	font-size: 0.875rem;
-	margin-left: 5px;
+	margin-left: 0.3125rem;
 }
 
-@media only screen and (min-width: 2134px) {
+@media only screen and (min-width: 133.375rem) {
 	.discountPrice {
 		font-size: 1rem;
 	}
