--- a/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
+++ b/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
@@ -6,7 +6,7 @@
 .profileImg {
 	width: 30px;
 	height: 30px;
-	margin-right: 10px;
+	margin-right: 0.625rem;
 	border-radius: 50%;
 	overflow: hidden;
 }
