--- a/src/Shared/SecondNavbar/Components/SecondNavDesktopLinks/SecondNavDesktopLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavDesktopLinks/SecondNavDesktopLinks.module.css
@@ -36,7 +36,7 @@
 		display: flex;
 		position: relative;
 		padding: 1em;
-		margin-left: 0px;
+		margin-left: 0;
 		flex-direction: column;
 		background-color: rgba(0, 0, 0, 0.6);
 		width: 100%;
@@ -46,7 +46,7 @@
 
 	.option {
 		margin-top: 1rem;
-		margin-left: 0px;
+		margin-left: 0;
 	}
 
 	.option::after {
