--- a/src/Shared/SecondNavbar/Components/SecondNavRightLinks/SecondNavRightLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavRightLinks/SecondNavRightLinks.module.css
@@ -4,7 +4,7 @@
 }
 
 .option:not(:first-child) {
-	margin-left: 10px;
+	margin-left: 0.625rem;
 }
 .option a {
 	text-decoration: none;
@@ -28,7 +28,7 @@
 		right: 1rem;
 	}
 	.option:not(:first-child) {
-		margin-left: 5px;
+		margin-left: 0.3125rem;
 	}
 	.option a {
 		fill: rgba(255, 255, 255, 0.5);
