--- a/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
+++ b/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
@@ -28,7 +28,7 @@
 	left: 0;
 }
 
-@media (max-width: 1023px) and (min-width: 48.0625rem) {
+@media (max-width: 63.9375rem) and (min-width: 48.0625rem) {
 	.secondNavbar {
 		width: 97vw;
 	}
