--- a/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
+++ b/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
@@ -10,7 +10,7 @@
 	-webkit-backdrop-filter: blur(50px);
 	border-radius: 4px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	margin-bottom: 16px;
+	margin-bottom: 1rem;
 	position: relative;
 	transform: translateX(100%);
 	transition: transform 300ms;
